--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Armonia Design</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="sidebar">
@@ -89,10 +95,9 @@
       <div id="chat">
         <h1>Chat</h1>
         <div id="chatUser">
-            <img
+          <img src="img/aldo.png" />
         </div>
       </div>
-    </div>
     </div>
   </body>
 </html>
