--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <section>
           <h1 id="contact"># Modulo di contatto</h1>
-          <p>
+          <form>
             Ciao!
             <br />
             <br />
@@ -98,9 +98,9 @@
               id="intro"
               name="intro"
             ></input>
-            <br />
+            . <br />
             Grazie.
-          </p>
+          </form>
           <button type="button" class="pageButton">INVIA MESSAGGIO ></button>
       </section>
       <section>
@@ -130,66 +130,21 @@
           </div>
       </section>
       <section>
-          <h1 id="stylishTable"># Stylish table</h1>
+        <div id="tableTitle">
+          <h1># Stylish table</h1>
           <button id="tableResetButton" class="pageButton">Ricarica dati</button>
-          <div id="stylishTable">
+        </div>
+        <div id="stylishTable">
           <table>
-            <tr>
+            <tr id="tableHeader">
               <th>Cliente</th>
               <th>Età</th>
               <th>Posizione</th>
               <th>Azioni</th>
             </tr>
             <tr class="blankRow">
-              <td colspan="3"></td>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
-                  <p id="chatUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
+              <td colspan="4"></td>
             </tr>
-            <tr>
-              <td colspan="3"></td>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
-                  <p class="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
-            </tr>
-            <tr>
-              <td colspan="3"></td>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
-                  <p class="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
-            </tr>
-            <tr>
-              <td colspan="3"></td>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
-                  <p class="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
-            </tr>
-            <tr>
-              <td colspan="3"></td>
               <td>
                 <div class="user tableElement">
                   <img class="tableImg" src="img/aldo.png" />
@@ -199,6 +154,50 @@
               <td>32</td>
               <td>Comico professionista</td>
               <td><a href="#">Cancella</a></td>
+            </tr>
+            <tr>
+              <td>
+                <div class="user tableElement">
+                  <img class="tableImg" src="img/aldo.png" />
+                  <p class="tableUserName">Aldo Baglio</p>
+                </div>
+              </td>
+              <td>32</td>
+              <td>Comico professionista</td>
+              <td><a href="#">Cancella</a></td>
+            </tr>
+            <tr>
+              <td>
+                <div class="user tableElement">
+                  <img class="tableImg" src="img/aldo.png" />
+                  <p class="tableUserName">Aldo Baglio</p>
+                </div>
+              </td>
+              <td>32</td>
+              <td>Comico professionista</td>
+              <td><a href="#">Cancella</a></td>
+            </tr>
+            <tr>
+              <td>
+                <div class="user tableElement">
+                  <img class="tableImg" src="img/aldo.png" />
+                  <p class="tableUserName">Aldo Baglio</p>
+                </div>
+              </td>
+              <td>32</td>
+              <td>Comico professionista</td>
+              <td><a href="#">Cancella</a></td>
+            </tr>
+            <tr>
+              <td>
+                <div class="user tableElement">
+                  <img class="tableImg" src="img/aldo.png" />
+                  <p id="tableUserName">Aldo Baglio</p>
+                </div>
+              </td>
+              <td>32</td>
+              <td>Comico professionista</td>
+              <td><a href="">Cancella</a></td>
             </tr>
           </table>
         </div>
