--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Armonia Design</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro,wght@1,300&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link 
+    href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,500;0,600;0,700;1,300&display=swap"
+    rel="stylesheet">
   </head>
   <body>
     <div id="sidebar" class="sidebar">
@@ -24,7 +23,7 @@
         </ul>
       </div>
       <div id="sidebar2" class="sidebar">
-        <div id="footer"><> by <b>De</b> Pasquale</div>
+        <div id="footer"><&sol;> by <b>De</b> Pasquale</div>
       </div>
     </div>
     <main>
@@ -119,7 +118,10 @@
                 <div class="chatMessage">Vorrei un etto di prosciutto</div>
                 <div class="chatMessage">Ecco a te!</div>
                 <div id="gift">
-                  <p>Nuovo regalo! &nbsp; 🦚</p>
+                  <span>
+                    <p>Nuovo regalo!</p>
+                    <span id="giftIcon">🦚</span>
+                  </span>
                   <a href="#">ACCETTA DONO</a>
                 </div>
               </div>
@@ -139,11 +141,12 @@
             <tr id="tableHeader">
               <th>Cliente</th>
               <th>Età</th>
+              <th class="blankCol"></th>
               <th>Posizione</th>
               <th>Azioni</th>
             </tr>
-            <tr class="blankRow">
-              <td colspan="4"></td>
+            <tr>
+              <td class="blankRow" colspan="4"></td>
             </tr>
               <td>
                 <div class="user tableElement">
@@ -152,6 +155,9 @@
                 </div>
               </td>
               <td>32</td>
+              <tc>
+                <td class="blankRow" rowspan="5"></td>
+              </tc>
               <td>Comico professionista</td>
               <td><a href="#">Cancella</a></td>
             </tr>
