--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               </div>
             </div>
           <div id="sendMessageForm">
-            <input type="text" id="messageInput" name="messageInput" placeholder="Scrivi un messaggio..."/>
+            <input type="text" id="messageInput" name="messageInput" placeholder="Sono il conte Dracula..."/>
             <button id="sendMessageButton">Invia messaggio ></button>
           </div>
       </section>
