feat: message send from input, automated reply with latency

--- a/index.html
+++ b/index.html
@@ -130,22 +130,22 @@
                   </div>
               </div>
               <div id="chatMessages">
-                <div class="chatMessage">Ciao, come posso aiutarti?</div>
-                <div class="chatMessage">Vorrei un etto di prosciutto</div>
-                <div class="chatMessage">Ecco a te!</div>
+                <div class="chatMessage theirs">Ciao, come posso aiutarti?</div>
+                <div class="chatMessage mine">Vorrei un etto di prosciutto</div>
+                <div class="chatMessage theirs">Ecco a te!</div>
                 <div id="gift">
                   <span>
                     <p>Nuovo regalo!</p>
                     <span id="giftIcon">🦚</span>
                   </span>
-                  <a href="#">ACCETTA DONO</a>
+                  <a><u>ACCETTA DONO</u></a>
                 </div>
               </div>
             </div>
-          <div id="sendMessageForm">
+          <form id="sendMessageForm">
             <input type="text" id="messageInput" name="messageInput" placeholder="Sono il conte Dracula..."/>
-            <button id="sendMessageButton">Invia messaggio ></button>
-          </div>
+            <button type="submit" id="sendMessageButton">Invia messaggio ></button>
+          </form>
       </section>
       <section>
         <div id="tableTitle">
