add: imgs, easter egg

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </tr>
               <td>
                 <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
+                  <img class="tableImg" src="img/user3.png" />
                   <p id="tableUserName">Aldo Baglio</p>
                 </div>
               </td>
@@ -180,7 +180,7 @@
             <tr>
               <td>
                 <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
+                  <img class="tableImg" src="img/user3.png" />
                   <p class="tableUserName">Aldo Baglio</p>
                 </div>
               </td>
@@ -191,7 +191,7 @@
             <tr>
               <td>
                 <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
+                  <img class="tableImg" src="img/user3.png" />
                   <p class="tableUserName">Aldo Baglio</p>
                 </div>
               </td>
@@ -202,7 +202,7 @@
             <tr>
               <td>
                 <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
+                  <img class="tableImg" src="img/user3.png" />
                   <p class="tableUserName">Aldo Baglio</p>
                 </div>
               </td>
@@ -213,7 +213,7 @@
             <tr>
               <td>
                 <div class="user tableElement">
-                  <img class="tableImg" src="img/aldo.png" />
+                  <img class="tableImg" src="img/user3.png" />
                   <p id="tableUserName">Aldo Baglio</p>
                 </div>
               </td>
