define table functions structures

--- a/index.html
+++ b/index.html
@@ -155,71 +155,16 @@
         <div id="stylishTable">
           <table>
             <tr id="tableHeader">
-              <th>Cliente</th>
-              <th>Età</th>
+              <th>Name</th>
+              <th>Username</th>
               <th class="blankCol"></th>
-              <th>Posizione</th>
+              <th>Città</th>
               <th>Azioni</th>
             </tr>
             <tr>
               <td class="blankRow" colspan="4"></td>
             </tr>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/user3.png" />
-                  <p id="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <tc>
-                <td class="blankRow" rowspan="5"></td>
-              </tc>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
-            </tr>
-            <tr>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/user3.png" />
-                  <p class="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
-            </tr>
-            <tr>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/user3.png" />
-                  <p class="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
-            </tr>
-            <tr>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/user3.png" />
-                  <p class="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="#">Cancella</a></td>
-            </tr>
-            <tr>
-              <td>
-                <div class="user tableElement">
-                  <img class="tableImg" src="img/user3.png" />
-                  <p id="tableUserName">Aldo Baglio</p>
-                </div>
-              </td>
-              <td>32</td>
-              <td>Comico professionista</td>
-              <td><a href="">Cancella</a></td>
+              
             </tr>
           </table>
         </div>
