fix: table header flex spacing

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div id="stylishTable">
           <table>
             <tr id="tableHeader">
-              <th>Nome</th>
+              <th>Cliente</th>
               <th>Username</th>
               <th class="blankCol"></th>
               <th>Città</th>
