fix: table header spacing

--- a/index.html
+++ b/index.html
@@ -157,14 +157,11 @@
             <tr id="tableHeader">
               <th>Cliente</th>
               <th>Username</th>
-              <th class="blankCol"></th>
               <th>Città</th>
               <th>Azioni</th>
             </tr>
             <tr>
-              <td class="blankRow" colspan="4"></td>
-            </tr>
-              
+              <td colspan="3" class="blankRow"></td>
             </tr>
           </table>
         </div>
